crates/wac-parser/tests/resolution/fail/type-decl-conflict.wac
package test:comp;

import foo: func();
export foo as i;

interface i {

}
